--- a/src/SFA.Apprenticeships.Application.UnitTests/SFA.Apprenticeships.Application.UnitTests.csproj
+++ b/src/SFA.Apprenticeships.Application.UnitTests/SFA.Apprenticeships.Application.UnitTests.csproj
@@ -172,6 +172,7 @@
     <Compile Include="Services\Candidate\Strategies\QueuedLegacySaveCandidateStrategyTests.cs" />
     <Compile Include="Services\Candidate\Strategies\SaveCandidateStrategyTests.cs" />
     <Compile Include="Services\Location\LocationSearchServiceTests.cs" />
+    <Compile Include="Services\Location\PostalAddressSearchServiceTests.cs" />
     <Compile Include="Services\Provider\GetProviderSiteEmployerLinksTests.cs" />
     <Compile Include="Services\Provider\ProviderServiceBuilder.cs" />
     <Compile Include="Services\Provider\GetProviderTests.cs" />
