--- a/src/SFA.Apprenticeships.Web.Recruit/Web.Dev.config
+++ b/src/SFA.Apprenticeships.Web.Recruit/Web.Dev.config
@@ -8,6 +8,18 @@
   </appSettings>
 
   <system.webServer>
+    <rewrite xdt:Transform="Insert">
+      <rules>
+        <rule name="RedirectToHTTPS" stopProcessing="true">
+          <match url="(.*)" />
+          <conditions>
+            <add input="{HTTPS}" pattern="off" ignoreCase="true" />
+            <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
+          </conditions>
+          <action type="Redirect" url="https://{SERVER_NAME}/{R:1}" redirectType="Permanent" />
+        </rule>
+      </rules>
+    </rewrite>
     <httpErrors errorMode="Custom" xdt:Transform="SetAttributes(errorMode)"></httpErrors>
   </system.webServer>
   
