--- a/src/SFA.Apprenticeships.Infrastructure.Repositories.Vacancies.Sql.Tests/packages.config
+++ b/src/SFA.Apprenticeships.Infrastructure.Repositories.Vacancies.Sql.Tests/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoFixture" version="3.38.1" targetFramework="net452" />
   <package id="AutoMapper" version="4.1.1" targetFramework="net452" />
   <package id="FluentAssertions" version="4.2.1" targetFramework="net452" />
   <package id="Microsoft.SqlServer.Dac" version="1.0.1" targetFramework="net452" />
