Split tests into mapping and database

--- a/src/SFA.Apprenticeships.Infrastructure.Repositories.Vacancies.Sql.Tests/SFA.Apprenticeships.Infrastructure.Repositories.Vacancies.Sql.Tests.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.Repositories.Vacancies.Sql.Tests/SFA.Apprenticeships.Infrastructure.Repositories.Vacancies.Sql.Tests.csproj
@@ -144,7 +144,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="SqlApprenticeshipVacancyRepositoryTests.cs" />
+    <Compile Include="BaseTests.cs" />
+    <Compile Include="DatabaseTests.cs" />
+    <Compile Include="MapperTests.cs" />
     <Compile Include="DatabaseInitialiser.cs" />
     <Compile Include="Formatters.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
