--- a/src/SFA.Apprenticeships.Infrastructure.Logging/SFA.Apprenticeships.Infrastructure.Logging.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.Logging/SFA.Apprenticeships.Infrastructure.Logging.csproj
@@ -142,6 +142,10 @@
       <Project>{91DB99C3-50A9-4DED-AB90-2FF94D0B130E}</Project>
       <Name>SFA.Apprenticeships.Domain.Interfaces</Name>
     </ProjectReference>
+    <ProjectReference Include="..\SFA.Apprenticeships.Infrastructure.Common\SFA.Apprenticeships.Infrastructure.Common.csproj">
+      <Project>{78B1F2A1-DCC3-4ED3-8CE0-16E0781B59FA}</Project>
+      <Name>SFA.Apprenticeships.Infrastructure.Common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\SFA.Apprenticeships.Infrastructure.Communication\SFA.Apprenticeships.Infrastructure.Communication.csproj">
       <Project>{D34D27D3-79A9-407E-86EF-AF3AC0EA024B}</Project>
       <Name>SFA.Apprenticeships.Infrastructure.Communication</Name>
