GetCounties service implementation and tests

--- a/src/SFA.Apprenticeship.Api.AvService.UnitTests/SFA.Apprenticeship.Api.AvService.UnitTests.csproj
+++ b/src/SFA.Apprenticeship.Api.AvService.UnitTests/SFA.Apprenticeship.Api.AvService.UnitTests.csproj
@@ -115,12 +115,16 @@
     <Compile Include="Mappers\Version51\VacancyDurationMapperTests.cs" />
     <Compile Include="Mappers\Version51\VacancyUploadRequestMapperTests.cs" />
     <Compile Include="Mappers\Version51\WageMapperTests.cs" />
-    <Compile Include="Mediators\Version51\ReferenceDataService\ReferenceDataServiceMediatorTests.cs" />
+    <Compile Include="Mediators\Version51\ReferenceDataService\GetCountiesTests.cs" />
+    <Compile Include="Mediators\Version51\ReferenceDataService\ReferenceDataServiceMediatorTestsBase.cs" />
+    <Compile Include="Mediators\Version51\ReferenceDataService\GetErrorCodesTests.cs" />
     <Compile Include="Providers\AuthenticationProviderTests.cs" />
+    <Compile Include="Providers\Version51\ReferenceDataProvider\GetCountiesTests.cs" />
     <Compile Include="Providers\Version51\VacancyDetailsProvider\ExceptionHandlingTests.cs" />
     <Compile Include="Providers\Version51\VacancyDetailsProvider\GetVacancyDetailsByQueryTests.cs" />
     <Compile Include="Providers\Version51\VacancyDetailsProvider\GetVacancyDetailsByReferenceNumberTests.cs" />
     <Compile Include="Builders\Version51\VacancyUploadDataBuilder.cs" />
+    <Compile Include="ServiceImplementation\Version51\ReferenceDataService\GetCountiesTests.cs" />
     <Compile Include="ServiceImplementation\Version51\ReferenceDataService\GetErrorCodesTests.cs" />
     <Compile Include="Services\WebServiceConsumerServiceTests.cs" />
     <Compile Include="Validators\Version51\EmployerDataValidatorTests.cs" />
