--- a/src/SFA.Apprenticeship.Api.AvService/SFA.Apprenticeship.Api.AvService.csproj
+++ b/src/SFA.Apprenticeship.Api.AvService/SFA.Apprenticeship.Api.AvService.csproj
@@ -290,6 +290,7 @@
     <Compile Include="DataContracts\Version51\WebInterfaceGenericDetailsData.cs" />
     <Compile Include="Mediators\Version51\ServiceMediatorBase.cs" />
     <Compile Include="Providers\IWebServiceAuthenticationProvider.cs" />
+    <Compile Include="Providers\Version51\IReferenceDataProvider.cs" />
     <Compile Include="Providers\WebServiceAuthenticationProvider.cs" />
     <Compile Include="Providers\AuthenticationResult.cs" />
     <Compile Include="Domain\WebServiceConsumer.cs" />
