--- a/src/SFA.Apprenticeship.Api.AvService.UnitTests/SFA.Apprenticeship.Api.AvService.UnitTests.csproj
+++ b/src/SFA.Apprenticeship.Api.AvService.UnitTests/SFA.Apprenticeship.Api.AvService.UnitTests.csproj
@@ -74,6 +74,14 @@
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AutoMapper, Version=3.3.1.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+      <HintPath>..\packages\AutoMapper.3.3.1\lib\net40\AutoMapper.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="AutoMapper.Net4, Version=3.3.1.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+      <HintPath>..\packages\AutoMapper.3.3.1\lib\net40\AutoMapper.Net4.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="FluentAssertions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=33f2691a05b67b6a, processorArchitecture=MSIL">
       <HintPath>..\packages\FluentAssertions.3.5.0\lib\net45\FluentAssertions.dll</HintPath>
       <Private>True</Private>
@@ -112,6 +120,7 @@
     <Compile Include="Mappers\Version51\ApprenticeshipVacancyQueryMapperTests.cs" />
     <Compile Include="Mappers\Version51\ApprenticeshipVacancyMapperTests.cs" />
     <Compile Include="Mappers\Version51\EmployerDataMapperTests.cs" />
+    <Compile Include="Mappers\Version51\ReferenceDataMappersTests.cs" />
     <Compile Include="Mappers\Version51\VacancyDurationMapperTests.cs" />
     <Compile Include="Mappers\Version51\VacancyUploadRequestMapperTests.cs" />
     <Compile Include="Mappers\Version51\WageMapperTests.cs" />
@@ -176,6 +185,7 @@
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="..\packages\AutoMapper.3.3.1\tools\AutoMapper.targets" Condition="Exists('..\packages\AutoMapper.3.3.1\tools\AutoMapper.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
