--- a/src/SFA.Apprenticeships.Infrastructure.Repositories.Vacancies.Sql/SFA.Apprenticeships.Infrastructure.Repositories.Vacancies.Sql.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.Repositories.Vacancies.Sql/SFA.Apprenticeships.Infrastructure.Repositories.Vacancies.Sql.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>SFA.Apprenticeships.Infrastructure.Repositories.Vacancies.Sql</RootNamespace>
     <AssemblyName>SFA.Apprenticeships.Infrastructure.Repositories.Vacancies.Sql</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Local|AnyCPU' ">
     <OutputPath>bin\Local\</OutputPath>
