--- a/src/SFA.Apprenticeships.NewDB.Domain.Entities/SFA.Apprenticeships.NewDB.Domain.Entities.csproj
+++ b/src/SFA.Apprenticeships.NewDB.Domain.Entities/SFA.Apprenticeships.NewDB.Domain.Entities.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>SFA.Apprenticeships.NewDB.Domain.Entities</RootNamespace>
     <AssemblyName>SFA.Apprenticeships.NewDB.Domain.Entities</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Local|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
