--- a/src/SFA.Infrastructure.Sql/SFA.Infrastructure.Sql.csproj
+++ b/src/SFA.Infrastructure.Sql/SFA.Infrastructure.Sql.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>SFA.Infrastructure.Sql</RootNamespace>
     <AssemblyName>SFA.Infrastructure.Sql</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Local|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
