--- a/src/SFA.Apprenticeships.Web.Manage/SFA.Apprenticeships.Web.Manage.csproj
+++ b/src/SFA.Apprenticeships.Web.Manage/SFA.Apprenticeships.Web.Manage.csproj
@@ -369,11 +369,6 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
     </Compile>
-    <Compile Include="Views\Vacancy\_comment.generated.cs">
-      <DependentUpon>_comment.cshtml</DependentUpon>
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Content Include="403.html" />
@@ -502,10 +497,6 @@
     <Content Include="Views\Vacancy\_EditLink.cshtml" />
     <Content Include="Views\Vacancy\_ValidationResultIcons.cshtml" />
     <Content Include="Views\Vacancy\_ApplicationsLink.cshtml" />
-    <Content Include="Views\Vacancy\_comment.cshtml">
-      <Generator>RazorGenerator</Generator>
-      <LastGenOutput>_comment.generated.cs</LastGenOutput>
-    </Content>
     <Content Include="Views\Shared\DisplayTemplates\VacancyLocationAddressViewModel.cshtml" />
     <Content Include="Views\Vacancy\EmployerInformation.cshtml">
       <Generator>RazorGenerator</Generator>
@@ -516,6 +507,8 @@
     <Content Include="Views\Vacancy\Locations.cshtml" />
     <Content Include="Views\Vacancy\_ContactDetailsAndVacancyHistory.cshtml" />
     <Content Include="Views\Shared\DisplayTemplates\_VacancyLinks.cshtml" />
+    <Content Include="Views\Shared\EditorTemplates\Comment.cshtml" />
+    <Content Include="Views\Vacancy\_comment.cshtml" />
     <None Include="Web.Demo.config">
       <DependentUpon>Web.config</DependentUpon>
       <SubType>Designer</SubType>
