Shared requirements and prospects view

--- a/src/SFA.Apprenticeships.Web.Raa.Common/SFA.Apprenticeships.Web.Raa.Common.csproj
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/SFA.Apprenticeships.Web.Raa.Common.csproj
@@ -270,6 +270,11 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
     </Compile>
+    <Compile Include="Views\Shared\DisplayTemplates\Vacancy\RequirementsProspects.generated.cs">
+      <DependentUpon>RequirementsProspects.cshtml</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config">
@@ -293,6 +298,10 @@
     <Content Include="Views\Shared\DisplayTemplates\Vacancy\FurtherVacancyDetails.cshtml">
       <Generator>RazorGenerator</Generator>
       <LastGenOutput>FurtherVacancyDetails.generated.cs</LastGenOutput>
+    </Content>
+    <Content Include="Views\Shared\DisplayTemplates\Vacancy\RequirementsProspects.cshtml">
+      <Generator>RazorGenerator</Generator>
+      <LastGenOutput>RequirementsProspects.generated.cs</LastGenOutput>
     </Content>
   </ItemGroup>
   <ItemGroup>
