Created new project with all mongo repositories

--- a/src/SFA.Apprenticeships.Infrastructure.Repositories.Mongo/SFA.Apprenticeships.Infrastructure.Repositories.Mongo.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.Repositories.Mongo/SFA.Apprenticeships.Infrastructure.Repositories.Mongo.csproj
@@ -89,7 +89,47 @@
     <Compile Include="Common\GenericMongoClient.cs" />
     <Compile Include="Common\IMongoAdminClient.cs" />
     <Compile Include="Common\MongoAdminClient.cs" />
+    <Compile Include="Communication\ApplicationStatusAlertRepository.cs" />
+    <Compile Include="Communication\CommunicationRepository.cs" />
+    <Compile Include="Communication\ContactMessageRepository.cs" />
+    <Compile Include="Communication\Entities\MongoApplicationStatusAlert.cs" />
+    <Compile Include="Communication\Entities\MongoApprenticeshipApplicationExpiringDraft.cs" />
+    <Compile Include="Communication\Entities\MongoContactMessage.cs" />
+    <Compile Include="Communication\Entities\MongoSavedSearchAlert.cs" />
+    <Compile Include="Communication\ExpiringApprenticeshipApplicationDraftRepository.cs" />
+    <Compile Include="Communication\IoC\CommunicationRepositoryRegistry.cs" />
+    <Compile Include="Communication\Mappers\CommunicationMappers.cs" />
+    <Compile Include="Communication\SavedSearchAlertRepository.cs" />
+    <Compile Include="Employers\EmployerRepository.cs" />
+    <Compile Include="Employers\Entities\MongoEmployer.cs" />
+    <Compile Include="Employers\IoC\EmployerRepositoryRegistry.cs" />
+    <Compile Include="Employers\Mappers\EmployerMappers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Providers\Entities\MongoProvider.cs" />
+    <Compile Include="Providers\Entities\MongoProviderSite.cs" />
+    <Compile Include="Providers\Entities\MongoProviderSiteEmployerLink.cs" />
+    <Compile Include="Providers\IoC\ProviderRepositoryRegistry.cs" />
+    <Compile Include="Providers\Mappers\ProviderMappers.cs" />
+    <Compile Include="Providers\ProviderRepository.cs" />
+    <Compile Include="Providers\ProviderSiteEmployerLinkRepository.cs" />
+    <Compile Include="Providers\ProviderSiteRepository.cs" />
+    <Compile Include="UserProfiles\AgencyUserRepository.cs" />
+    <Compile Include="UserProfiles\Entities\MongoAgencyUser.cs" />
+    <Compile Include="UserProfiles\Entities\MongoProviderUser.cs" />
+    <Compile Include="UserProfiles\IoC\UserProfileRepositoryRegistry.cs" />
+    <Compile Include="UserProfiles\Mappers\UserProfileMappers.cs" />
+    <Compile Include="UserProfiles\UserProfileRepository.cs" />
+    <Compile Include="Users\Entities\MongoUser.cs" />
+    <Compile Include="Users\IoC\UserRepositoryRegistry.cs" />
+    <Compile Include="Users\Mappers\UserMappers.cs" />
+    <Compile Include="Users\UserRepository.cs" />
+    <Compile Include="Vacancies\ApprenticeshipVacancyRepository.cs" />
+    <Compile Include="Vacancies\Entities\MongoApprenticeshipVacancy.cs" />
+    <Compile Include="Vacancies\Entities\MongoReferenceNumber.cs" />
+    <Compile Include="Vacancies\IoC\VacancyRepositoryRegistry.cs" />
+    <Compile Include="Vacancies\Mappers\ApprenticeshipVacancyMappers.cs" />
+    <Compile Include="Vacancies\OfflineApprenticeshipVacancyRepository.cs" />
+    <Compile Include="Vacancies\ReferenceNumberRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
