--- a/src/SFA.Apprenticeships.Infrastructure.Processes/SFA.Apprenticeships.Infrastructure.Processes.csproj
+++ b/src/SFA.Apprenticeships.Infrastructure.Processes/SFA.Apprenticeships.Infrastructure.Processes.csproj
@@ -368,33 +368,9 @@
       <Project>{1F4776F3-884B-4B00-BA97-22BFA06C034E}</Project>
       <Name>SFA.Apprenticeships.Infrastructure.Raa</Name>
     </ProjectReference>
-    <ProjectReference Include="..\SFA.Apprenticeships.Infrastructure.Repositories.Applications\SFA.Apprenticeships.Infrastructure.Repositories.Applications.csproj">
-      <Project>{91822365-711D-4976-AD7F-069063D8B487}</Project>
-      <Name>SFA.Apprenticeships.Infrastructure.Repositories.Applications</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\SFA.Apprenticeships.Infrastructure.Repositories.Audit\SFA.Apprenticeships.Infrastructure.Repositories.Audit.csproj">
-      <Project>{1CD7F494-A6BC-448A-AF1E-ECFAF03A66FC}</Project>
-      <Name>SFA.Apprenticeships.Infrastructure.Repositories.Audit</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\SFA.Apprenticeships.Infrastructure.Repositories.Authentication\SFA.Apprenticeships.Infrastructure.Repositories.Authentication.csproj">
-      <Project>{2D21EA2D-CE77-4795-B2F0-A172E59AC491}</Project>
-      <Name>SFA.Apprenticeships.Infrastructure.Repositories.Authentication</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\SFA.Apprenticeships.Infrastructure.Repositories.Candidates\SFA.Apprenticeships.Infrastructure.Repositories.Candidates.csproj">
-      <Project>{AA87BD85-5A33-46B8-B26F-C6B680876486}</Project>
-      <Name>SFA.Apprenticeships.Infrastructure.Repositories.Candidates</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\SFA.Apprenticeships.Infrastructure.Repositories.Communication\SFA.Apprenticeships.Infrastructure.Repositories.Communication.csproj">
-      <Project>{B1278CE6-5670-49F4-85DF-350294EC151A}</Project>
-      <Name>SFA.Apprenticeships.Infrastructure.Repositories.Communication</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\SFA.Apprenticeships.Infrastructure.Repositories.Users\SFA.Apprenticeships.Infrastructure.Repositories.Users.csproj">
-      <Project>{4696d786-2f3c-4a12-bd6b-38e2981d6df1}</Project>
-      <Name>SFA.Apprenticeships.Infrastructure.Repositories.Users</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\SFA.Apprenticeships.Infrastructure.Repositories.Vacancies\SFA.Apprenticeships.Infrastructure.Repositories.Vacancies.csproj">
-      <Project>{A3B35EFD-CD80-4366-A857-788EADD145A9}</Project>
-      <Name>SFA.Apprenticeships.Infrastructure.Repositories.Vacancies</Name>
+    <ProjectReference Include="..\SFA.Apprenticeships.Infrastructure.Repositories.Mongo\SFA.Apprenticeships.Infrastructure.Repositories.Mongo.csproj">
+      <Project>{A4DE4AF3-F06D-4D0F-AF2E-E72A11BAB49B}</Project>
+      <Name>SFA.Apprenticeships.Infrastructure.Repositories.Mongo</Name>
     </ProjectReference>
     <ProjectReference Include="..\SFA.Apprenticeships.Infrastructure.VacancyIndexer\SFA.Apprenticeships.Infrastructure.VacancyIndexer.csproj">
       <Project>{02D19199-A4BB-484A-AA48-208C7B6D819F}</Project>
